--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       <h1>Stream. Watch. Connect.</h1>
       <p>The Vibe is Here</p>
       <div class="cta-buttons">
-        <button class="watch-btn">Watch Live</button>
-        <button class="dashboard-btn">Access Dashboard</button>
+        <a href="#streams" class="watch-btn">Watch Live</a>
       </div>
     </div>
   </section>
