--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
         <a href="#streams">Streams</a>
         <a href="#contact">Contact</a>
       </div>
-      <div class="auth-buttons">
-        <button class="login-btn">Login</button>
-        <button class="signup-btn">Sign Up</button>
-      </div>
     </nav>
   </header>
 
@@ -89,10 +85,12 @@
     <div class="footer-content">
       <div class="footer-section">
         <h3>Quick Links</h3>
-        <a href="#">Home</a>
-        <a href="#about">About</a>
-        <a href="#streams">Streams</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="rules.html">Rules</a>
+        <a href="legacy.html">Legacy</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="contact.html">Contact</a>
       </div>
       <div class="footer-section">
         <h3>Legal</h3>
