--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About</a>
-      <a href="#streams">Streams</a>
+      <a href="index.html">Streams</a>
       <a href="contact.html">Contact</a>
     </div>
   </nav>
