--- a/index.html
+++ b/index.html
@@ -1,13 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>STREAMVIBE - Stream. Watch. Connect.</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <title>STREAMVIBE - Stream. Watch. Connect.</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" href="styles.css" />
+  <script type="module" src="script.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+  <header>
+    <nav class="navbar">
+      <div class="logo">STREAM<span>VIBE</span></div>
+      <div class="nav-links">
+        <a href="#" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#streams">Streams</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Stream. Watch. Connect.</h1>
+      <p>The Vibe is Here</p>
+      <div class="cta-buttons">
+        <a href="#streams" class="watch-btn">Watch Live</a>
+      </div>
+    </div>
+  </section>
+
+  <section id="streams" class="streams-section">
+    <h2>Popular Streams</h2>
+    <div class="stream-filters">
+      <button class="active">All</button>
+      <button>Gaming</button>
+      <button>Music</button>
+      <button>Talk Shows</button>
+    </div>
+    <div class="streams-grid">
+      <!-- Stream cards will be populated by JavaScript -->
+    </div>
+  </section>
+
+  <section id="about" class="about-section">
+    <h2>About STREAMVIBE</h2>
+    <p>STREAMVIBE is your go-to platform for seamless, interactive streaming. Whether you're watching or streaming, we ensure an engaging and high-quality experience.</p>
+    <div class="features">
+      <div class="feature">
+        <i class="fas fa-video"></i>
+        <h3>HD Streaming</h3>
+        <p>Crystal clear quality</p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-users"></i>
+        <h3>Community</h3>
+        <p>Connect with others</p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-shield-alt"></i>
+        <h3>Secure</h3>
+        <p>Safe environment</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="contact-section">
+    <h2>Contact Us</h2>
+    <form id="contact-form" class="contact-form">
+      <input type="text" placeholder="Name" required>
+      <input type="email" placeholder="Email" required>
+      <textarea placeholder="Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+    <div class="social-links">
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>Quick Links</h3>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="rules.html">Rules</a>
+        <a href="legacy.html">Legacy</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div class="footer-section">
+        <h3>Legal</h3>
+        <a href="#">Terms of Service</a>
+        <a href="#">Privacy Policy</a>
+      </div>
+      <div class="footer-section">
+        <h3>Connect</h3>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2024 STREAMVIBE. All rights reserved.</p>
+    </div>
+  </footer>
+</body>
 </html>
