--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="footer-section">
         <h3>Quick Links</h3>
         <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
+        <a href="/about.html">About Us</a>
         <a href="rules.html">Rules</a>
         <a href="legacy.html">Legacy</a>
         <a href="pricing.html">Pricing</a>
