--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
         <h3>Quick Links</h3>
         <a href="index.html">Home</a>
         <a href="/about.html">About Us</a>
-        <a href="rules.html">Rules</a>
-        <a href="legacy.html">Legacy</a>
-        <a href="pricing.html">Pricing</a>
-        <a href="contact.html">Contact</a>
+        <a href="/rules.html">Rules</a>
+        <a href="/legacy.html">Legacy</a>
+        <a href="/pricing.html">Pricing</a>
+        <a href="/contact.html">Contact</a>
       </div>
       <div class="footer-section">
         <h3>Legal</h3>
