--- a/legacy.html
+++ b/legacy.html
@@ -23,10 +23,10 @@
       <h1>Our Legacy</h1>
       <div class="team-grid">
         <div class="team-member">
-          <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="John Doe">
-          <h3>John Doe</h3>
-          <p class="title">Founder & CEO</p>
-          <p class="bio">Visionary leader with 15+ years of experience in digital media and streaming technology.</p>
+          <img src="rithvik png.png" alt="Rithvik Matta">
+          <h3>Rithvik Rajesh Matta</h3>
+          <p class="title">PES Electronic city campus</p>
+          <p class="bio">SRN: PES2UG23CS485</p>
           <div class="social-links">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -34,10 +34,10 @@
         </div>
 
         <div class="team-member">
-          <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Jane Smith">
-          <h3>Jane Smith</h3>
-          <p class="title">Chief Technology Officer</p>
-          <p class="bio">Tech innovator specializing in streaming infrastructure and platform scalability.</p>
+          <img src="rishi png.png" alt="Rishi A Sheth">
+          <h3>Rishi A Sheth</h3>
+          <p class="title">PES Electronic city campus</p>
+          <p class="bio">SRN: PES2UG23CS479</p>
           <div class="social-links">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
@@ -45,10 +45,10 @@
         </div>
 
         <div class="team-member">
-          <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Mike Johnson">
-          <h3>Mike Johnson</h3>
-          <p class="title">Head of Community</p>
-          <p class="bio">Community builder focused on creating meaningful connections between creators and viewers.</p>
+          <img src="Rohan.png" alt="Rohan Jogi Jogi">
+          <h3>Rohan Jogi</h3>
+          <p class="title">PES Electronic city campus</p>
+          <p class="bio">SRN: PES2UG23CS489</p>
           <div class="social-links">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
