--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,12 @@
           <div class="info-card">
             <i class="fas fa-map-marker-alt"></i>
             <h3>Address</h3>
-            <p>123 Streaming Street<br>Digital City, DC 12345<br>United States</p>
+            <p>PES University<br>Electronic City<br>Bangalore, India</p>
           </div>
           <div class="info-card">
             <i class="fas fa-phone"></i>
             <h3>Phone</h3>
-            <p>+1 (555) 123-4567</p>
+            <p>xxxxxxxxxx</p>
           </div>
           <div class="info-card">
             <i class="fas fa-envelope"></i>
