--- a/legacy.html
+++ b/legacy.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="team-member">
-          <img src="Rohan.png" alt="Rohan Jogi Jogi">
+          <img src="Rohan png.png" alt="Rohan Jogi Jogi">
           <h3>Rohan Jogi</h3>
           <p class="title">PES Electronic city campus</p>
           <p class="bio">SRN: PES2UG23CS489</p>
